# cpython

./: .cproject  .gitignore  .project  CMakeLists.bak.txt  CMakeLists.txt  CMakeLists_.txt  Makefile.pre.in  ZYGOTE_NOTES  build.txt  build0.txt  build1.txt  build2.txt  build3.txt  compile_commands.json  configure-osx  ft_test  ft_test.c  ft_test.py  gen_cmake.py  gilectomy.patch  python.id2  python.nam  python.til  test.py  x.py
Include/: boolobject.h  object.h  objimpl.h  pystate.h
Include/cpython/: pymem.h  pystate.h
Include/internal/: mem.h  pycore_object.h  pycore_pymem.h
Include/internal/ft/: lfds.h  sync.h
Modules/: Setup.dist  _abc.c  _ftmodule.c  _testcapimodule.c  gcmodule.c  main.c
Objects/: bytesobject.c  dictobject.c  longobject.c  moduleobject.c  object.c  obmalloc.c  typeobject.c  unicodeobject.c  weakrefobject.c
Python/: bltinmodule.c  ceval.c  pylifecycle.c  pystate.c  sysmodule.c
Python/ft/: lfds.c  sync.c
Tools/: lfds.py
_ft_test.dSYM/Contents/: Info.plist
cmake/: ConfigureChecks.cmake
cmake/extensions/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt
cmake/python/: CMakeLists.txt
